Not porting to jQuery, too much work, staying vanilla JS. Beginning to refactor JS code

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,9 @@
 {
 	"eqeqeq": true,
-	/*"curly": true,*/
+	"curly": true,
 	"undef": true,
-	"unused": true
+	// "unused": true,
+	"globals": {
+	"$": false
+	}
 }
