--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-concat-css": "^0.3.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-imagemin": "^0.9.3",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-sass": "^0.9.2",
