--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Vitezslav Benes",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.9.8",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.2.0",
     "grunt-concat-css": "^0.3.1",
@@ -24,6 +25,11 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
     "load-grunt-tasks": "^3.1.0"
   }
 }
